[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/fonts/Rokkitt-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://gui/hud.gd" type="Script" id=2]
[ext_resource path="res://assets/images/hud_heart.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://assets/fonts/Rokkitt-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 12
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -99.7943
margin_top = 0.222977
margin_right = -25.7943
margin_bottom = 46.223
rect_scale = Vector2( 1.3, 1.3 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Control" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="Sprite" parent="Control/Lives"]
position = Vector2( -16, 4 )
texture = ExtResource( 3 )
hframes = 2

[node name="Heart2" type="Sprite" parent="Control/Lives"]
position = Vector2( -8, 4 )
texture = ExtResource( 3 )
hframes = 2

[node name="Heart3" type="Sprite" parent="Control/Lives"]
position = Vector2( 0, 4 )
texture = ExtResource( 3 )
hframes = 2

[node name="Heart4" type="Sprite" parent="Control/Lives"]
position = Vector2( 8, 4 )
texture = ExtResource( 3 )
hframes = 2

[node name="Heart5" type="Sprite" parent="Control/Lives"]
position = Vector2( 16, 4 )
texture = ExtResource( 3 )
hframes = 2

[node name="YouDied" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 0, 0, 0.407843 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="YouDied"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.8653
margin_top = -25.4327
margin_right = 0.134735
margin_bottom = -11.4327
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "YOU DIED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="YouDied"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.1487
margin_top = 43.3792
margin_right = 42.8513
margin_bottom = 60.3792
custom_fonts/font = SubResource( 4 )
text = "click to restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
